--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="card-1">
       <div class="profile">
         <img src="images/image-daniel.jpg" alt="profile image">
-        <div class="profile-name">
+        <div>
           <h2>Daniel Clifford</h2>
           <h3>Verified Graduate</h3>
         </div>
@@ -36,7 +36,7 @@
     <section class="card-2">
       <div class="profile">
         <img src="images/image-jonathan.jpg" alt="profile image">
-        <div class="profile-name">
+        <div>
           <h2>Jonathan Walters</h2>
           <h3>Verified Graduate</h3>
         </div>
@@ -51,7 +51,7 @@
     <section class="card-4">
       <div class="profile">
         <img src="images/image-jeanette.jpg" alt="profile image">
-        <div class="profile-name">
+        <div>
           <h2>Jeanette Harmon</h2>
           <h3>Verified Graduate</h3>
         </div>
@@ -66,7 +66,7 @@
     <section class="card-3">
       <div class="profile">
         <img src="images/image-patrick.jpg" alt="profile image">
-        <div class="profile-name">
+        <div>
           <h2>Patrick Abrams</h2>
           <h3>Verified Graduate</h3>
         </div>
@@ -86,7 +86,7 @@
     <section class="card-4">
       <div class="profile">
         <img src="images/image-kira.jpg" alt="profile image">
-        <div class="profile-name">
+        <div>
           <h2>Kira Whittle</h2>
           <h3>Verified Graduate</h3>
         </div>
